src/test/ui/feature-gate-dropck-ugeh-2.stderr
error: use of deprecated attribute `dropck_parametricity`: unsafe_destructor_blind_to_params has been replaced by may_dangle and will be removed in the future. See https://github.com/rust-lang/rust/issues/34761
  --> $DIR/feature-gate-dropck-ugeh-2.rs:17:5
   |
LL |     #[unsafe_destructor_blind_to_params]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ help: remove this attribute
   |
note: lint level defined here
  --> $DIR/feature-gate-dropck-ugeh-2.rs:11:9
   |
LL | #![deny(deprecated)]
   |         ^^^^^^^^^^

error: aborting due to previous error

